--- a/.github/workflows/s3.yaml
+++ b/.github/workflows/s3.yaml
@@ -46,7 +46,7 @@ jobs:
         with:
           args: --endpoint-url https://hb.bizmrg.com --acl public-read --follow-symlinks
         env:
-          AWS_S3_BUCKET: deploy
+          AWS_S3_BUCKET: deploy-2025
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SOURCE_DIR: "dist"
